# roguelike

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
data/fonts/: alagard.txt  fonts.json
data/items/: butter_knife.json  holy_bread.json
data/maps/: sample_map.json  sample_map.tiles
data/monsters/: goblin.json  rat.json
data/textures/: textures.json
include/: Attribute.h  Constants.h  Constants.hpp  Entity.hpp  EntityManager.hpp  Game.h  Game.hpp  Item.h  Player.hpp  ResourceManager.hpp  Tile.h  Tile.hpp  TileMap.h  TileMap.hpp
include/Actions/: Action.h  ActionQueue.h  AttackAction.h  MoveAction.h
include/Entities/: Character.h  Entity.h  Entity.hpp  GroundItem.h  Monster.h  Player.h  Player.hpp
include/GUI/: GUICharacterScreen.h  GUIHealthBar.h  GUIInventory.h
include/Map/: DoorTile.h  FloorTile.h  MapGenerator.h  Tile.h  TileMap.h  WallTile.h  World.h
include/Map/Tiles/: BaseTile.h  DoorTile.h  FloorTile.h  WallTile.h
include/Scenes/: GameScene.h  Scene.h  Scenes.h  SplashScene.h
include/System/: EntityManager.h  EntityManager.hpp  Inventory.h  ResourceManager.h  ResourceManager.hpp  SceneManager.h
include/System/Factories/: ItemFactory.h  MonsterFactory.h
include/System/Resources/: ResourceManager.h  ResourceStore.h
include/Utils/: RichText.h
src/: Attribute.cpp  EntityManager.cpp  Game.cpp  Item.cpp  ResourceManager.cpp  TileMap.cpp  main.cpp
src/Actions/: ActionQueue.cpp  AttackAction.cpp  MoveAction.cpp
src/Entities/: Character.cpp  Entity.cpp  Monster.cpp  Player.cpp
src/GUI/: GUICharacterScreen.cpp  GUIHealthBar.cpp  GUIInventory.cpp
src/Map/: MapGenerator.cpp  TileMap.cpp  World.cpp
src/Scenes/: GameScene.cpp  SplashScene.cpp
src/System/: EntityManager.cpp  Inventory.cpp  ResourceManager.cpp  SceneManager.cpp
src/System/Factories/: ItemFactory.cpp  MonsterFactory.cpp
src/System/Resources/: ResourceManager.cpp
src/Utils/: RichText.cpp
